tweaks and updates

--- a/config/termite/config
+++ b/config/termite/config
@@ -8,8 +8,8 @@ mouse_autohide = false
 allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
-clickable_url = true
-font = inconsolata-g 10
+clickable_url = false
+font = inconsolata-g for powerline 10
 scrollback_lines = 12000
 search_wrap = true
 #icon_name = terminal
