--- a/config/sway/config
+++ b/config/sway/config
@@ -221,6 +221,11 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+mouse_warping none
+
+smart_borders on
+default_border normal 6
+
 # Include configs from 3 locations:
 #  - /usr/share/sway/config.d
 #  - /etc/sway/config.d
