update sapling config

--- a/config/sapling/sapling.conf
+++ b/config/sapling/sapling.conf
@@ -27,5 +27,11 @@ git = true
 hasShownGettingStarted = true
 render-compact = true
 
+[pager]
+pager = less
+
 [extensions]
 extdiff =
+
+[github]
+pr_workflow = single
