--- a/private_dot_config/sapling/sapling.conf
+++ b/private_dot_config/sapling/sapling.conf
@@ -9,6 +9,8 @@ mode='terminfo'
 # uncomment to disable color in command output
 # (see 'sl help color' for details)
 # color = never
+[ui]
+merge=:merge3
 
 [commands]
 status.relative = true
@@ -30,8 +32,8 @@ render-compact = true
 [pager]
 pager = less
 
-[extensions]
-extdiff =
-
 [github]
 pr_workflow = single
+
+[hint]
+ack = old-version
