--- a/private_dot_config/sway/config
+++ b/private_dot_config/sway/config
@@ -96,6 +96,8 @@ input "type:keyboard" {
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+bindsym $mod+p exec grimshot save area - | wl-copy
 #
 # Moving around:
 #
