--- a/private_dot_config/sway/config
+++ b/private_dot_config/sway/config
@@ -31,7 +31,7 @@ set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # Requires: desktop-backgrounds-compat, swaybg
-output * bg /usr/share/backgrounds/default.png fill
+output * bg /usr/share/backgrounds/default.jxl fill
 #
 # Example configuration:
 #
@@ -39,7 +39,7 @@ output * bg /usr/share/backgrounds/default.png fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output DP-1 pos 0 0
-output DP-2 pos 3840 0
+output HDMI-A-1 pos 3840 0
 
 ### Idle configuration
 #
@@ -77,6 +77,12 @@ input "type:keyboard" {
 #
     # Start a terminal
     bindsym $mod+Return exec $term
+
+    # Open chrome with default profile
+    bindsym $mod+t exec google-chrome --profile-directory="Default"
+    # Open chrome with second profile
+    bindsym $mod+o exec google-chrome --profile-directory="Profile 1"
+
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -156,11 +162,11 @@ workspace 3 output DP-1
 workspace 4 output DP-1
 workspace 5 output DP-1
 
-workspace 6 output DP-2
-workspace 7 output DP-2
-workspace 8 output DP-2
-workspace 9 output DP-2
-workspace 10 output DP-2
+workspace 6 output HDMI-A-1
+workspace 7 output HDMI-A-1
+workspace 8 output HDMI-A-1
+workspace 9 output HDMI-A-1
+workspace 10 output HDMI-A-1
 #
 # Layout stuff:
 #
